# FluxPrint

./: .gitignore  README.md  example.ipynb  pyproject.toml  setup.py
.github/workflows/: mirror-to-inrae.yml
fluxprint/: __init__.py  commons.py  core.py  exceptions.py  footprint.py  io.py  micrometeorology.py  template.py  utils.py  version.py
fluxprint/ext_libs/: example.ipynb  ffpkljun15-0.0.1-py3-none-any.whl  scrapy_footprint.ipynb
fluxprint/ext_libs/Kljun_et_al_2015/: license.txt
fluxprint/model/: Hsieh_et_al_2000.py  Kljun_et_al_2015.py  Kormann_and_Meixner_2001.py  __init__.py  base.py
fluxprint/model/Kljun_et_al_2015_original/: __init__.py
footprint_toolkit/: __init__.py  core.py  io.py
footprint_toolkit/model/: __init__.py  ffp_kljun2015.py
footprint_tools/: utils.py
footprint_tools/model/: ffp_kljun2015.py
misc/: concept.pptx
sample/: example.ipynb
sample/input/: eddypro_FR-Rmv_full_output_2024-11-16T044017_adv.csv  inputs_24apr2024.csv
tests/: test_core.py  test_correctness.py  test_footprint.py  test_micromet_reconciliation.py  test_model_registry.py
