[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxprint"
dynamic = ["version"]
description = "Flux footprint models for eddy covariance data analysis"
readme = "README.md"
authors = [
    { name = "Pedro Henrique Coimbra", email = "pedro-henrique.herig-coimbra@inrae.fr" },
]
keywords = ["footprint", "flux", "eddy covariance", "EC", "micrometeorology"]
license = "EUPL-1.2"
requires-python = ">=3.10"
# Runtime requirements. These are all imported eagerly today (core/io/utils
# import rasterio/xarray/pyproj/fiona/shapely at module load), so they cannot be
# made optional until those imports are deferred. The `Footprint` object itself
# is numpy-only and imports its IO backends lazily; the optional-extras split
# below becomes meaningful once the eager imports in core/io/utils are removed.
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "xarray",
    "rasterio",
    "pyproj",
    "shapely",
    "fiona",
    "requests",
    "regorator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Framework :: Jupyter",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Other/Nonlisted Topic",
]

[project.optional-dependencies]
icoscp = ["icoscp", "icoscp_core"]
# Planned, once core/io/utils defer their imports (the `Footprint` object is
# already lazy): split the heavy libraries out of `dependencies` into:
#   netcdf    = ["xarray", "netcdf4"]
#   tiff      = ["rasterio"]
#   crs       = ["pyproj"]
#   shapefile = ["fiona", "shapely"]

[project.urls]
Homepage = "https://github.com/pedrohenriquecoimbra/fluxprint"
Issues = "https://github.com/pedrohenriquecoimbra/fluxprint/issues"

[tool.setuptools]
# `version` is read statically from the literal in fluxprint/version.py
packages.find = { where = ["."], include = ["fluxprint*"], exclude = ["sample*", "tests*", "deprecated*"], namespaces = false }

[tool.setuptools.dynamic]
version = { attr = "fluxprint.version.version" }
